--- a/Portfolio.html
+++ b/Portfolio.html
@@ -34,6 +34,7 @@
               <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Home</a>
               <a href="#portfolio" class="text-sm font-semibold leading-6 text-gray-900">PortFolio</a>
               <a href="#About" class="text-sm font-semibold leading-6 text-gray-900">About</a>
+              <a href="Chatbot.html" class="text-sm font-semibold leading-6 text-gray-900">Chatbot</a>
             </div>
           </nav>
           <!-- Mobile Menu -->
